--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,10 @@ dash-bootstrap-components = "*"
 gunicorn = "*"
 plotly = "*"
 pandas = "*"
+joblib = "==1.0.1"
+scikit-learn = "==0.24.1"
+xgboost = "==1.4.2"
+category-encoders = "==2.2.2"
 
 [requires]
 python_version = "3"
